--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -11,7 +11,7 @@
         
     </div>
     <div class="card-body">
-        <h4>Type in a sentance and see how many letters there are</h4>
+        <h4>Type in a sentence and see how many letters there are</h4>
 
         <form method="post">
             <div class="form-group">
